# HStack

./: .env.schema  .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  ai_tools.py  commute_scheduler.py  database.py  design_rulebook.md  implementation_plan_hstackcore.md  main.py  models.py  package-lock.json  package.json  pyproject.toml  ticket_philosophy.md
crates/hstack-agent/: Cargo.toml
crates/hstack-agent/src/: action.rs  agent.rs  control.rs  error.rs  lib.rs  manager.rs  memory.rs  rate_limiter.rs  tests.rs  tool.rs
crates/hstack-agent/src/provider/: gemini.rs  mod.rs  openai_compat.rs  rate_limit.rs
crates/hstack-app/: Cargo.toml  Info.plist  package.json  tauri.conf.json
crates/hstack-app/capabilities/: default.json
crates/hstack-app/icons/: icon.icns
crates/hstack-app/src/: app_state.rs  lib.rs  location_utils.rs  main.rs  planner_support.rs  secure_store.rs  sync_runtime.rs  voice_runtime.rs
crates/hstack-core/: Cargo.toml
crates/hstack-core/src/: api_models.rs  chat.rs  error.rs  integration.rs  lib.rs  settings.rs  sync.rs  temporal_parser.rs  ticket.rs  ticket_tool_schemas.rs  voice.rs
crates/hstack-core/src/provider/: gemini.rs  mod.rs  openai_compat.rs  rate_limit.rs
crates/hstack-server-lite/: Cargo.toml
crates/hstack-server-lite/src/: main.rs
docs/: android-build.md  licensing.md  public-private-contract.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  SyncEngine.tsx  i18n.tsx  index.css  platform.ts  syncAuth.ts  syncConfig.ts  taskPresentation.ts  ticketPresentation.ts  useSync.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: AnimatedWebGLGrain.tsx  GrainFallback.tsx  Settings.tsx  SetupWizard.tsx  WebGLGrain.tsx
frontend/src/components/settings/: sections.tsx  types.ts  ui.tsx
frontend/src/locales/: en-GB.json  es-ES.json  fr-FR.json  zh-CN.json
hstack/: __init__.py  ai_tools.py  commute_scheduler.py  database.py  main.py  models.py
scripts/: android-env.sh  android-reinstall-dev.sh  reset-welcome-screen.mjs
services/directions/: main.py  requirements.txt
static/: app.js  index.html  style.css
tests/: test_directions_service.py  test_frontend_hosting_wizard.py
