[package]
name = "hstack-agent"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
hstack-core = { path = "../hstack-core" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
