[package]
name = "HStack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hstack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "HStack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hstack-core = { version = "0.1.0", path = "../hstack-core" }
tokio = { version = "1.50.0", features = ["full"] }
tauri-plugin-store = "2.4.2"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.12.3"
rrule = "0.14.0"

