[package]
name = "hstack-server-lite"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
hstack-core = { path = "../hstack-core" }

tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.15"
dotenvy = "0.15"
jsonwebtoken = "9.3"
